--- a/app/views/course/withdraw.html
+++ b/app/views/course/withdraw.html
@@ -11,7 +11,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="{{ course.path }}/vacancies" method="post">
+      <form action="{{ course.path }}/withdraw" method="post">
         <p>Withdrawing this course will:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>immediately remove it from Find</li>
