--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -87,24 +87,32 @@
                     {% elseif data[course.programmeCode + '-publish-state'] == 'published-with-changes' %}
                       <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published govuk-!-margin-bottom-1">Published&nbsp;*</span><br />
                       <span class="govuk-body-s">* Unpublished changes</span>
+                    {% elseif data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
+                      <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
                     {% else %}
                       <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
                     {% endif %}
                   </td>
                   <td class="govuk-table__cell no-wrap">
-                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
+                    {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
+                      No – withdrawn
+                    {% elseif (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
                       <a href="#">Yes – view online</a>
                     {% else %}
                       No – still in draft
                     {% endif %}
                   </td>
                   <td class="govuk-table__cell">
-                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
+                    {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
+                      Closed
+                    {% elseif (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
                       {% if data[course.programmeCode + '-vacancies-flag'] == 'Yes' %}Open{% else %}Closed{% endif %}
                     {% endif %}
                   </td>
                   <td class="govuk-table__cell">
-                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
+                    {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
+                      No
+                    {% elseif (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
                       {{ data[course.programmeCode + '-vacancies-flag'] }}  (<a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/vacancies">Edit</a>)
                     {% endif %}
                   </td>
