--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -1,19 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'About your organisation' %}
 {% block pageTitle %}{{ title }}{% endblock %}
-
-{% block breadcrumbs %}
-  {{
-    govukBreadcrumbs({
-      items: [
-        {
-          href: "/",
-          text: data['training-provider-name']
-        }
-      ]
-    })
-  }}
-{% endblock %}
+{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% block content %}
   {% set message %}
