--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -1,19 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'Courses' %}
 {% block pageTitle %}{{ title }}{% endblock %}
-
-{% block breadcrumbs %}
-  {{
-    govukBreadcrumbs({
-      items: [
-        {
-          href: "/",
-          text: data['training-provider-name']
-        }
-      ]
-    })
-  }}
-{% endblock %}
+{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% block content %}
   {% if justEditedVacancies %}
