--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -28,11 +28,15 @@
 
         <p>Manage courses, training locations and vacancies in the current cycle.</p>
       </div>
-      <div class="govuk-!-margin-bottom-8">
+      <div>
         <h2 class="govuk-heading-m">
           <a href="/next-cycle">Next cycle (2020-2021)</a>
         </h2>
         <p>Prepare your courses and training locations for the next cycle.</p>
       </div>
+
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+      {% include "includes/_access-and-preferences.html" %}
+    </div>
   </div>
 {% endblock %}
