--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -98,23 +98,10 @@
           <li>manage vacancies for each course</li>
         </ul>
       </div>
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
-          <a href="/request-access">Request access for someone</a>
-        </h2>
-        <p>Request a DfE Sign-in account for others who manage your courses.</p>
-      </div>
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
-          <a href="/ucas/apply-preferences">UCAS Apply settings</a>
-        </h2>
-        <p>These are settings that relate to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>what UCAS sends to successful applicants</li>
-          <li>what happens when you receive an application</li>
-          <li>who UCAS can contact</li>
-        </ul>
-      </div>
+
+      {% if not data['rolled-over'] %}
+        {% include "includes/_access-and-preferences.html" %}
+      {% endif %}
     </div>
     <!-- <div class="govuk-grid-column-one-third">
       <div class="status-box">
