Upgrade prototype kit and govuk-frontend (#35)
* Update run-sequence from 1.2.2 to 2.2.1

Tested by ensuring that the gulp tasks in gulp/tasks.js that use run-sequence still run without error.

* Update standard from 10.0.2 to 11.0.1 and fix violations

* Update sync-request from 4.1.0 to 6.0.0

Tested by ensuring that the release url on the `/docs/install` page is still generated correctly (sync-request is only used by the getLatestRelease in lib/utils, which is used on the /docs/install page to automatically link to the latest release from GitHub)

* Document changes in changelog

* Update govuk-frontend dependency to 1.1.1

* Unify download link approach

Within the docs we link to `/prototype-admin/download-latest` which looks up the latest release from GitHub and redirects to the zip download.

On the install page itself, we look up the latest release URL and then link directly to GitHub from the page.

This moves the `/prototype-admin/download-latest` to `/docs/install` so that it can live within the docs folder and unifies the two approaches so that we consistently use the `/docs/download` URL. This means that we are no longer blocking on a GitHub request before we can render the install page – and that we only make the request to GitHub if the user actually tries to download the kit.

* Simplify getLatestRelease logic

- Rather than trying to extract the tag name from the zipball URL, use the value of `name` that we get in the response data
- Use template literals to build the zip URL rather than multiple variables and concatenation
- Avoid assigning things to variables that aren't used more than once (githubUrl, options) which also reduces the amount of seeking you have to do through the code
- Remove url, zipUrl variables by assigning to releaseUrl directly and `return`ing from every scenario

* Specify node dependency using caret notation

This fixes an issue when deploying to CloudFoundry instances (such as GOV.UK PaaS) whe

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -4,8 +4,8 @@ $govuk-global-styles: true;
 // Not in design system:
 $button-colour: #00823b;
 
-// Import GOV.UK Frontend
-@import "node_modules/govuk-frontend/all";
+// Import GOV.UK Frontend and any extension styles if extensions have been configured
+@import "lib/extensions/extensions";
 
 // Take a look at in app/assets/sass/patterns/ to see which files are imported.
 @import 'patterns/simplemde-theme';
