--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -4,6 +4,10 @@
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /><!--<![endif]-->
 
+{% for stylesheetUrl in extensionConfig.stylesheets %}
+  <link href="{{ stylesheetUrl }}" rel="stylesheet" type="text/css" />
+{% endfor %}
+
 <script>
   var data = {{ data | dump | safe }};
 </script>
