--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -2,6 +2,7 @@
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set isFe = (data[code + '-phase'] == 'Further education') %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
@@ -26,20 +27,29 @@
             iconFallbackText: "Warning"
           }) }}
 
-          <p>We will approve titles that include:</p>
+          {% if isFe %}
+            <p>We won’t approve titles that include:</p>
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>a subject or pair of subjects, eg Geography, or Geography with History</li>
-            <li>an age range, eg Primary (3-7), or Primary (5-11)</li>
-          </ul>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>location names</li>
+              <li>qualifications or outcomes, eg PGCE or PGDE</li>
+            </ul>
+          {% else %}
+            <p>We will approve titles that include:</p>
 
-          <p>We won’t approve titles that include:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>a subject or pair of subjects, eg Geography, or Geography with History</li>
+              <li>an age range, eg Primary (3-7), or Primary (5-11)</li>
+            </ul>
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>school names</li>
-            <li>qualifications or outcomes, eg PGCE with QTS full time</li>
-            <li>references to any educational or curricular levels except Primary, eg Key Stage 1, Early Years, Secondary - you should specify an age range instead</li>
-          </ul>
+            <p>We won’t approve titles that include:</p>
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li>school names</li>
+              <li>qualifications or outcomes, eg PGCE with QTS full time</li>
+              <li>references to any educational or curricular levels except Primary, eg Key Stage 1, Early Years, Secondary - you should specify an age range instead</li>
+            </ul>
+          {% endif %}
         {% endset %}
 
         {{ macros.radioGroup(code + '-change-title', [
@@ -47,7 +57,7 @@
             name: 'Yes, that’s correct'
           },
           {
-            name: 'No, I need to change the title',
+            name: 'No, request a different title',
             more: moreTitle
           }
         ], errors) }}
