--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -130,7 +130,7 @@
     {% else %}
       {{ data['schools'][0].name }}
     {% endif %}
-    {% if data['schools'].length == 1 %}
+    {% if data['schools'].length == 1 and showChangeLinks %}
       <br>
       <span class="empty">You can’t change this because you only have <a href="/locations">1 location</a></span>
     {% endif %}
@@ -245,25 +245,39 @@
   {% endif %}
 </div>
 {% if showTitleAndDescription %}
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Title
-    </dt>
-    <dd class="govuk-summary-list__value">
-      {% if data[code + '-change-title'] == 'Yes, that’s correct' or not data[code + '-change-title']  %}
-        {{ data[code + '-generated-title'] }}
-      {% else %}
+  {% if data[code + '-change-title'] != 'Yes, that’s correct' %}
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Title requested
+      </dt>
+      <dd class="govuk-summary-list__value">
         {{ data[code + '-title'] }}
+      </dd>
+      {% if showChangeLinks %}
+      <dd class="govuk-summary-list__actions">
+        <a href="/new/{{ code }}/title?change=title">
+          Change<span class="govuk-visually-hidden"> title</span>
+        </a>
+      </dd>
       {% endif %}
-    </dd>
-    {% if showChangeLinks %}
-    <dd class="govuk-summary-list__actions">
-      <a href="/new/{{ code }}/title?change=title">
-        Change<span class="govuk-visually-hidden"> title</span>
-      </a>
-    </dd>
-    {% endif %}
-  </div>
+    </div>
+  {% else %}
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Title
+      </dt>
+      <dd class="govuk-summary-list__value">
+        {{ data[code + '-generated-title'] }}
+      </dd>
+      {% if showChangeLinks %}
+      <dd class="govuk-summary-list__actions">
+        <a href="/new/{{ code }}/title?change=title">
+          Change<span class="govuk-visually-hidden"> title</span>
+        </a>
+      </dd>
+      {% endif %}
+    </div>
+  {% endif %}
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Description
