Add a cancel request link

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -31,7 +31,9 @@
       <p class="govuk-heading-s">
         {{ course.titleRequested }} ({{ course.programmeCode }})
       </p>
-      <p class="govuk-!-margin-bottom-0">You’ll receive an email from the Becoming a Teacher team when the change is approved or rejected.</p>
+      <p>You’ll receive an email from the Becoming a Teacher team when the change is approved or rejected.</p>
+
+      <p class="govuk-!-margin-bottom-0"><a href="#">Cancel this request</a></p>
     {% endif %}
   </div>
   {% endif %}
@@ -166,7 +168,9 @@
           <p class="govuk-heading-s">
             {{ course.titleRequested }} ({{ course.programmeCode }})
           </p>
-          <p class="govuk-!-margin-bottom-0">You’ll receive an email from the Becoming a Teacher team when the change is approved or rejected.</p>
+          <p>You’ll receive an email from the Becoming a Teacher team when the change is approved or rejected.</p>
+
+          <p class="govuk-!-margin-bottom-0"><a href="#">Cancel this request</a></p>
         </div>
       {% endif %}
 
