Use red links for delete and withdraw

--- a/app/assets/sass/patterns/_destructive-button.scss
+++ b/app/assets/sass/patterns/_destructive-button.scss
@@ -21,3 +21,10 @@ $destructive-button-border-colour: govuk-colour("black");
     background-color: $destructive-button-hover-background-colour;
   }
 }
+
+.destructive-link,
+.destructive-link:link,
+.destructive-link:visited,
+.destructive-link:active {
+  color: govuk-colour("red");
+}
