--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -231,14 +231,14 @@
         <p>Remove this course from Find and close applications.</p>
 
         <p class="remove-bottom-margin">
-          <a href="/course/{{ linkPath }}/withdraw">Withdraw this course</a>
+          <a href="/course/{{ linkPath }}/withdraw" class="destructive-link">Withdraw this course</a>
         </p>
       {% endif %}
     {% else %}
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m" />
 
       <p class="remove-bottom-margin">
-        <a href="/course/{{ linkPath }}/delete">Delete this course</a>
+        <a href="/course/{{ linkPath }}/delete" class="destructive-link">Delete this course</a>
       </p>
     {% endif %}
   </div>
