Tweak cycles page

--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -23,19 +23,18 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/">Current cycle (2019-2020)</a>
+          <a href="/">Current cycle (2019&thinsp;–&thinsp;2020)</a>
         </h2>
 
-        <p>Manage courses, training locations and vacancies in the current cycle.</p>
+        <p>Manage courses, locations and vacancies in the current cycle.</p>
       </div>
-      <div>
+      <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/next-cycle">Next cycle (2020-2021)</a>
+          <a href="/next-cycle">Next cycle (2020&thinsp;–&thinsp;2021)</a>
         </h2>
-        <p>Prepare your courses and training locations for the next cycle.</p>
+        <p>Prepare your courses and locations for the next cycle.</p>
       </div>
 
-      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
       {% include "includes/_access-and-preferences.html" %}
     </div>
   </div>
