--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -49,6 +49,12 @@
               iconFallbackText: 'Warning'
           }) }}
         </div>
+      {% elseif nextCycle %}
+        <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
+        <hr class="govuk-section-break govuk-section-break--m">
+      {% else %}
+        <p class="govuk-body-l">Manage courses, locations and vacancies in the current&nbsp;cycle.</p>
+        <hr class="govuk-section-break govuk-section-break--m">
       {% endif %}
 
       <div class="govuk-!-margin-bottom-8">
@@ -92,7 +98,8 @@
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>create, preview and publish courses</li>
+          <li>add and delete courses</li>
+          <li>preview and publish courses</li>
           <li>write about each course</li>
           <li>copy content between courses</li>
           <li>manage vacancies for each course</li>
