--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -22,14 +22,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
           <a href="/">Current cycle (2019&thinsp;–&thinsp;2020)</a>
         </h2>
 
         <p>Manage courses, locations and vacancies in the current cycle.</p>
       </div>
       <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
           <a href="/next-cycle">Next cycle (2020&thinsp;–&thinsp;2021)</a>
         </h2>
         <p>Prepare your courses and locations for the next cycle.</p>
