--- a/app/views/includes/_access-and-preferences.html
+++ b/app/views/includes/_access-and-preferences.html
@@ -1,5 +1,5 @@
 <div class="govuk-!-margin-bottom-8">
-  <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
     <a href="/request-access">Request access for someone</a>
   </h2>
   <p>Request a DfE Sign-in account for others who manage your courses.</p>
