Tweak cycle title and breadcrumb

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -21,9 +21,9 @@
       <h1 class="govuk-heading-xl">
         {% if data['rolled-over'] %}
           {% if nextCycle %}
-            Next cycle (2020/2021)
+            Next cycle (2020&thinsp;–&thinsp;2021)
           {% else %}
-            Current cycle (2019/2020)
+            Current cycle (2019&thinsp;–&thinsp;2020)
           {% endif %}
         {% else %}
           {{ data['training-provider-name'] }}
