Only manage vacancies on current cycle

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -102,7 +102,9 @@
           <li>preview and publish courses</li>
           <li>write about each course</li>
           <li>copy content between courses</li>
+          {% if not nextCycle %}
           <li>manage vacancies for each course</li>
+          {% endif %}
         </ul>
       </div>
 
