--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -11,12 +11,12 @@
           Begin preparing for the next&nbsp;cycle
         </h1>
 
-        <p>All your courses, locations and details have been rolled over from the current cycle. You can now begin preparing them for the next recruitment cycle&nbsp;(2020&thinsp;–&thinsp;2021).</p>
+        <p>All your courses, locations and details have been rolled over from the current cycle. You can now update them for the next recruitment cycle&nbsp;(2020&thinsp;–&thinsp;2021).</p>
 
-        <p>When preparing for the next cycle you can:</p>
+        <p>You can:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>add new courses</li>
-          <li>delete courses you won’t be running</li>
+          <li>delete courses you’re no longer running</li>
           <li>edit titles, outcomes and locations</li>
         </ul>
 
