--- a/app/views/ucas/_contacts.html
+++ b/app/views/ucas/_contacts.html
@@ -1,11 +1,12 @@
-<h3 class="govuk-heading-m">Fraud contact</h3>
-<p>They will receive alerts about any fraudulent activity, such as similarity detection for a plagiarised personal statement.</p>
-{{ macros.textbox('fraud-contact-email', 'Email address (optional)') }}
+<p>UCAS will send them:</p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>new application alerts if you’ve enabled them</li>
+  <li>the UCAS monthly bulletin, which will include information about deadlines for making decisions</li>
+  <li>invoices for payment of UCAS fees</li>
+  <li>alerts about any fraudulent activity, such as similarity detection for a plagiarised personal statement</li>
+  <li>notices about UCAS systems and planned downtime</li>
+</ul>
 
-<h3 class="govuk-heading-m">UCAS correspondent</h3>
-<p>They will receive the UCAS monthly bulletin, these include key information about deadlines for making decisions. UCAS allow only one correspondent and they should forward information to relevant staff.</p>
-{{ macros.textbox('correspondent-contact-email', 'Email address (optional)') }}
-
-<h3 class="govuk-heading-m">UCAS finance contact</h3>
-<p>UCAS will invoice them for payment of fees.</p>
-{{ macros.textbox('finance-contact-email', 'Email address (optional)') }}
+{{ macros.textbox('lead-contact-name', 'Name') }}
+{{ macros.textbox('lead-contact-email', 'Email address') }}
+{{ macros.textbox('lead-contact-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
