--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -23,7 +23,7 @@
       <form action="/" method="post">
         <h2 class="govuk-heading-l">Who UCAS will contact</h2>
 
-        <p>UCAS don’t have permission to share the contact details you gave them in web-link with the Becoming a Teacher team. To find out your details or to change them you should contact UCAS support at <a href="#">support@ucas.com</a>.</p>
+        <p>UCAS don’t have permission to share the contact details you gave them in web-link with the Becoming a Teacher team. To find out your details or to change them contact the UCAS HEP Team on 0344 984 1111, or at <a href="#">hep_team@ucas.ac.uk</a>.</p>
 
         <p>Alternatively you can set a new contact below, this will overwrite the contacts that UCAS already have. We will share this information with UCAS.</p>
 
