--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -36,8 +36,8 @@
               Unknown
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a href="#">
-                Change<span class="govuk-visually-hidden"> phase</span>
+              <a href="/ucas/ucas-correspondent">
+                Change
               </a>
             </dd>
           </div>
@@ -50,7 +50,20 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
-                Change<span class="govuk-visually-hidden"> phase</span>
+                Change
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              GT12 reply email or URL
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Unknown
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a href="#">
+                Change
               </a>
             </dd>
           </div>
@@ -63,7 +76,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
-                Change<span class="govuk-visually-hidden"> phase</span>
+                Change
               </a>
             </dd>
           </div>
@@ -76,7 +89,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
-                Change<span class="govuk-visually-hidden"> phase</span>
+                Change
               </a>
             </dd>
           </div>
@@ -89,7 +102,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
-                Change<span class="govuk-visually-hidden"> phase</span>
+                Change
               </a>
             </dd>
           </div>
